[package]
name = "line-notify-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.5", default-features = false, features = [
    "use_alloc",
] }
unicode-segmentation = "1.10.1"
ureq = { version = "2.6.2", default-features = false, features = ["tls"] }
